--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -24,3 +24,12 @@ button,
     font-size: 1.4rem;
     line-height: 1.28;
 }
+
+li,
+.li {
+    font-family: Gordita;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.28;
+}
