--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -7,6 +7,24 @@ h2,
     line-height: 1.5;
 }
 
+h3,
+.h3 {
+    font-family: Gordita;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 2.4rem;
+    line-height: 1.5;
+}
+
+h4,
+.h4 {
+    font-family: Gordita;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 1.2;
+}
+
 p,
 .p {
     font-family: Gordita;
