--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -4,6 +4,7 @@
     position: fixed;
     top: 0;
     background-color: $main-white;
+    z-index: 10;
 
     &__logo {
         grid-column: 1 / 2;
@@ -32,7 +33,6 @@
         align-items: center;
         justify-content: space-between;
         padding: 3.6rem 0;
-        margin: 0 1.8rem;
 
         border: 0.3rem solid $green;
         transition: 0.5s all;
@@ -60,13 +60,13 @@
     }
 
     &__hamburger.active {
-        .nav__hamburger-bar:nth-child(2) {
+        .header__hamburger-bar:nth-child(2) {
             opacity: 0;
         }
-        .nav__hamburger-bar:nth-child(1) {
+        .header__hamburger-bar:nth-child(1) {
             transform: translateY(0.8rem) rotate(45deg);
         }
-        .nav__hamburger-bar:nth-child(3) {
+        .header__hamburger-bar:nth-child(3) {
             transform: translateY(-0.8rem) rotate(-45deg);
         }
     }
