--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,3 +1,12 @@
+h1,
+.h1 {
+    font-family: Gordita;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 4.8rem;
+    line-height: 1.25;
+}
+
 h2,
 .h2 {
     font-family: Gordita;
@@ -32,6 +41,22 @@ p,
     font-weight: 500;
     font-size: 1.4rem;
     line-height: 1.28;
+}
+
+.p-large {
+    font-family: Gordita;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 1.28;
+}
+
+.p-small {
+    font-family: Gordita;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 1.2rem;
+    line-height: 1.5;
 }
 
 button,
