--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,4 +17,6 @@ html {
 @import 'blocks/services';
 @import 'blocks/work';
 @import 'blocks/price';
+@import 'blocks/galery';
 @import 'blocks/faq';
+@import 'blocks/contact';
