--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -5,6 +5,7 @@
     top: 0;
     background-color: $main-white;
     z-index: 10;
+    box-shadow: 0 0.5rem 1rem $green;
 
     &__logo {
         grid-column: 1 / 2;
@@ -25,17 +26,19 @@
         border-radius: 1.2rem;
         list-style-type: none;
 
-        top: 7.4rem;
+        left: 50%;
+        transform: translateX(-50%);
+        top: -100%;
         position: fixed;
-        right: -100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
         padding: 3.6rem 0;
 
+        z-index: 10;
+        transition: 0.5s ease-in-out;
         border: 0.3rem solid $green;
-        transition: 0.5s all;
 
         &-item {
             color: $gray-dark;
@@ -43,7 +46,9 @@
     }
 
     &__menu.active {
-        right: 0;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     &__hamburger {
