--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import 'base/mixins';
 @import 'base/variables';
 @import 'base/typography';
+@import 'base/switch';
 
 html {
     font-size: 10px;
